--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -16,5 +15,10 @@
       "es2018",
       "dom"
     ],
+    "paths": {
+      "ngx-dynamic-forms/forms": [
+        "projects/ngx-dynamic-forms/src/lib/ngx-dynamic-forms.module"
+      ]
+    }
   }
 }
